--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>My Links</header>
-<summary>A web page of links to other cool pages!</summary>
+<summary>A web page of linkss to other cool pages!</summary>
 <ul>
 	<li><a href="tfl_tube/">TFL Tube Status</a> - Tabular visualisation of the tube data</li>
 	<li><a href="map/">Shaded World Map</a> - A shaded interactive map of the world</li>
@@ -15,4 +15,4 @@
 </ul>
 </body>
 </html>
-testing
+
