--- a/treemap/index.html
+++ b/treemap/index.html
@@ -11,3 +11,4 @@
 <script src="js/treemap.js"></script>
 <script src="js/odi_treemap_extra.js"></script>
 <script src="js/control.js"></script>
+</html>
